<?xml version="1.0"?>
<package format="2">
  <name>occupancy_invert</name>
  <version>0.1.0</version>
  <description>The occupancy map inverter to fit standard usd in dsp</description>

  <maintainer email="samuel.karsson@ltu.se">Samuel Karlsson</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

</package>
